--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -23,7 +23,23 @@ div.wrapper {
     border-width: 10px;
     border-left-width: 0px;
 }
-div#html5-style-2content.data {
+img.logo { overflow-clip-margin: content-box; overflow: clip; }
+div#container { position: relative; 
+    top: 0em; 
+    left: 0; 
+    width: 100%; 
+    margin: auto;  
+	}
+nav#nav.data {
+	display: block;
+    padding: .8em;
+    background: #16a085;
+    color: white;
+    text-decoration: none;
+    border-right: 1px solid #34495e;
+    font-size: .9em;
+}
+div#\#html5-style-2content.data {
     background-color:transparent; 
     border-left:10px white solid; 
     border-right:10px white solid; 
@@ -419,15 +435,15 @@ nav#gallerypagenav { float:left; margin-left:10px; width:115px;
 nav#gallerypagenav ul { margin-left:0; border:0; width:115px; 
 } 
 /*set far right column for ads*/ 
-#gallerypagerightcol { width:255px; float:right; text-align:center; 
+div#gallerypagerightcol { width:255px; float:right; text-align:center; 
 } 
-#gallerypagerightcol p.advert {font-size: 15px; margin-top:190px; 
+div#gallerypagerightcol p.advert {font-size: 15px; margin-top:190px; 
 } 
 /*set middle column for main content*/ 
-#gallerypagemidcol { margin-left:135px; margin-right:155px; 
+div#gallery-pagemidcol.data { margin-left:135px; margin-right:155px; 
 } 
 /*set gallery block position*/ 
-#gallerypagegallery-block { position:relative; left: 30px; top:10px; 
+div#gallery-pagegallery-block.data { position:relative; left: 30px; top:10px; 
 } 
 /*set footer*/ 
 footer#gallerypagefooter { clear:both; color:black; text-align:center; width:970px; 
@@ -487,6 +503,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
