--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -64,7 +64,7 @@ header#html5-style-2header {
   background: url(../bda-20.jpg);
   margin: 10px auto;
 }
-h1#html5-style-2h1 { font-size:150%; color:rgba(0,0,0,.5); position: relative; left:90px; top: -3px;
+h1#html5-ch-7h1.veryimportant.heading.stuff { font-size:150%; color:rgba(0,0,0,.5); position: relative; left:90px; top: -3px;
 width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
@@ -503,6 +503,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
