--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -64,6 +64,11 @@ header#html5-style-2header {
   background: url(../bda-20.jpg);
   margin: 10px auto;
 }
+h1 {
+    font-size: 125%;
+    color: maroon;
+    margin: 0 0 10px 0;
+}
 h1#html5-ch-7h1.veryimportant.heading.stuff { font-size:150%; color:rgba(0,0,0,.5); position: relative; left:90px; top: -3px;
 width:480px;
 }
@@ -503,6 +508,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
