--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -437,7 +437,7 @@ h2#gallerypageh2 {font-size:large; font-family:"times new roman"; text-align:cen
 /*PAGE LAYOUT*/ 
 body {margin:auto; width:970px; 
 } 
-header#gallerypageheader.data { width:970px; 
+header#gallerypageheader.data { width:95%; 
 } 
 nav#gallerypagenav { float:left; margin-left:10px; width:115px; 
 } 
@@ -512,6 +512,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
