--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -70,7 +70,7 @@ h1 {
     left: 90px;
     top: 55px;
     width: 480px;
-    color: maroon;
+    color: white;
     margin: 0 0 10px 0;
 }
 h1#html5-ch-7h1.veryimportant.heading.stuff { font-size:150%; color:rgba(0,0,0,.5); position: relative; left:90px; top: -3px;
@@ -512,6 +512,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
