--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1,4 +1,4 @@
-/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css */
+/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css *
 
 /* equalise for various browsers and change #header to header */
 div body header #content { margin:0; padding:0; border:0;
@@ -449,10 +449,10 @@ div#gallerypagerightcol { width:255px; float:right; text-align:center;
 div#gallerypagerightcol p.advert {font-size: 15px; margin-top:190px; 
 } 
 /*set middle column for main content*/ 
-div#gallerypagemidcol.data { margin-left:135px; margin-right:155px; 
+div#gallery-pagemidcol.data { margin-left:135px; margin-right:155px; 
 } 
 /*set gallery block position*/ 
-div#gallerypagegallery-block.data { position:relative; left: 30px; top: -490px; 
+div#gallery-pagegallery-block.data { position:relative; left: 30px; top: -490px; 
 } 
 /*set footer*/ 
 footer#gallerypagefooter { clear:both; color:black; text-align:center; width:970px; 
@@ -512,6 +512,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
