--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -439,7 +439,7 @@ body {margin:auto; width:970px;
 } 
 header#gallery-pageheader.data { width:95%; 
 } 
-nav#gallery-pagenav { float:left; margin-left:10px; width:115px; 
+nav#gallery-pagenav.data { float:left; margin-left:10px; width:115px; 
 } 
 nav#gallery-pagenav ul { margin-left:0; border:0; width:115px; 
 } 
@@ -508,10 +508,11 @@ position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
 position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden; 
 } 
 /* MouseOver state (hover)- reveal larger picture */ 
-#gallery-pagecol-3a:hover { background: white; 
+#gallery-pagecol-3 a:hover { background: white; 
 } 
 
 #gallery-pagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
