--- a/CSS/style-yosemite-2.css
+++ b/CSS/style-yosemite-2.css
@@ -5,7 +5,7 @@ html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li {  padding: 0; margin: 0;
 }
 header, footer, section, article, nav { display:block; 
 }
-body { margin: 0; padding: 0; background: url(images/img01.gif) repeat-x left top;
+body { margin: 0; padding: 0; /* background: url(images/img01.gif) repeat-x left top; */
 	font-family: Arial; font-size: 100%; color: black;
 }
 h1, h2, h3 { margin: 0; padding: 0; font-weight: normal;
