--- a/style.css
+++ b/style.css
@@ -1610,10 +1610,10 @@ audio:not([controls]) {
 
 html, button, input, select, textarea {
   font-family: sans-serif; }
-
+/*
 body {
   margin: 0; }
-
+*/
 a:focus {
   outline: thin dotted; }
 
