--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -82,7 +82,7 @@ width:480px;
 margin-top: 82px; margin-left:auto; margin-right:auto; padding:8px; 
 font-size:medium; color:maroon;
 }
-h2#html5-style-2h2 { font-size:x-large; color:white; margin:0 0 10px 0;
+h2#html5-style-2h2 { font-size: 100%; color:white; margin:0 0 10px 0;
 }
 h3#html5-style-2h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
