--- a/CSS/turquoise.css
+++ b/CSS/turquoise.css
@@ -2,6 +2,7 @@ html body h1 h2 h3 h4 h5 h6 p ol ul li {  padding: 0; margin: 0;
 }
 header, footer, section, article, nav { display:block; 
 }
+/*
 body { 
     background-color:#bbFFaa; 
     color:black; 
@@ -10,6 +11,7 @@ body {
     100% calc(100% - 20px), calc(100% - 20px) 100%,
     20px 100%, 0 calc(100% - 20px), 0 20px);
 }
+*/
  
 #container { width:97%; margin:auto; min-width:800px; max-width:1100px; clip-path:polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 
     100% calc(100% - 20px), calc(100% - 20px) 100%,
