--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -3,7 +3,7 @@
 /* equalise for various browsers and change #header to header */
 div body header #content { margin:0; padding:0; border:0;
 }
-body { /*background:#FFF */url(images/green-grad.jpg) repeat-x; margin: auto;
+body { background:#FFF *url(images/green-grad.jpg) repeat-x; margin: auto;
 }
 div.wrapper { 
     position: relative; 
@@ -11,7 +11,7 @@ div.wrapper {
     left: 0; 
     width: 80%; 
     margin: auto;
-	padding: .3em .8em;
+	  padding: .3em .8em;
     border: 1px solid rgba(0,0,0,.1);
     background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
     border-radius: .2em;
@@ -78,9 +78,7 @@ width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#html5-style-2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; 
-margin-top: 82px; margin-left:auto; margin-right:auto; padding:8px; 
-font-size:medium; color:maroon;
+#html5-style-2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: 82px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2#html5-style-2h2 { font-size: 100%; color:white; margin:0 0 10px 0;
 }
@@ -90,8 +88,7 @@ h3#html5-style-2h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
 #html5-style-2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#html5-style-2midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
-vertical-align:top;
+#html5-style-2midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
 nav#html5-style-2nav ul { margin:10px 0 10px 0; width:135px; float:right;
@@ -103,8 +100,7 @@ nav#html5-style-2nav li { list-style-type:none;
 nav#html5-style-2nav li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* set general anchor styles and include the zoom fix for IE6*/
-nav#html5-style-2nav li.btn a { display: block; color: white; font-weight: bold; 
-text-decoration: none; zoom:1;
+nav#html5-style-2nav li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
 /* mouseout (default) */
@@ -416,10 +412,9 @@ Listing 2-6b provides the CSS presentation instructions for a 3 column gallery s
  CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY 
 /*set menu buttons*/
 
-Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) 
+/* Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) 
 *set attributes for consistent appearance in all browsers*/ 
-html, body, p, ul, li, h1, h2 { margin:0; padding:0; 
-} 
+html, body, p, ul, li, h1, h2 { margin:0; padding: 0;} 
 /*set images to have no borders*/ 
 img { border:0; 
 } 
@@ -507,84 +502,4 @@ hide them*/
 } 
 
 #gallery-pagecol-3 a:hover img.hid { visibility:visible;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
