--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -448,6 +448,9 @@ div#gallery-pagemidcol.data { margin-left:135px; margin-right:155px;
 /*set gallery block position*/ 
 div#gallerypagegallery-block.data { position:relative; left: 30px; top: -490px; 
 } 
+/*set gallery block position*/ 
+div#gallerypagegallery-block { position:relative; left: 30px; top: -490px; 
+} 
 /*set footer*/ 
 footer#gallery-pagefooter { clear:both; color:black; text-align:center; width:970px; 
 } 
@@ -502,4 +505,5 @@ hide them*/
 } 
 
 #gallery-pagecol-3 a:hover img.hid { visibility:visible;
+
 }
