--- a/style.css
+++ b/style.css
@@ -542,7 +542,7 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;  paddin
 header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
-header {width:920px; height:180px; padding:0; border:10px white solid; background: url(images/header3.jpg); margin:10px auto;
+header {width:95%; height:180px; padding:0; border:10px white solid; background: url(images/header3.jpg); margin:10px auto;
 }
 h1 { font-size:100%; color :white; position: relative; left:90px; top: 55px;
 width:480px;
