--- a/style.css
+++ b/style.css
@@ -549,7 +549,7 @@ width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: 5%; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 
 
