--- a/CSS/churches-style1.css
+++ b/CSS/churches-style1.css
@@ -1,4 +1,4 @@
-﻿/*position body and table at horizontal centre of screen*/
+﻿/*position body and table at horizontal centre of screen*
 body { font-family:"times new roman"; font-size:medium; color:navy; margin:auto; min-width:780px;}
 img { border:0; margin:0; padding:0; 
 }
