--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -11,6 +11,7 @@ div.wrapper {
     left: -11px; 
     width: 100%; 
     margin: auto;
+	text-align: center;
 }
 img.logo { overflow-clip-margin: content-box; overflow: clip; }
 div#container { position: relative; 
@@ -496,6 +497,7 @@ hide them*/
 #gallery-pagecol-3 a:hover img.hid { visibility:visible;
 
 }
+
 
 
 
