--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -9,8 +9,9 @@ div.wrapper {
     position: relative; 
     top: 0em; 
     left: 0px; 
-    width: 60em; 
-    margin: auto;
+    width: ; 
+    margin-left:auto; 
+    margin-right:auto; 
 	text-align: center;
 }
 img.logo { overflow-clip-margin: content-box; overflow: clip; }
@@ -497,6 +498,7 @@ hide them*/
 #gallery-pagecol-3 a:hover img.hid { visibility:visible;
 
 }
+
 
 
 
