--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -9,7 +9,7 @@ div.wrapper {
     position: relative; 
     top: 0em; 
     left: 0px; 
-    width: ; 
+    width: 904px ; 
     margin-left:auto; 
     margin-right:auto; 
 	text-align: center;
@@ -498,6 +498,7 @@ hide them*/
 #gallery-pagecol-3 a:hover img.hid { visibility:visible;
 
 }
+
 
 
 
