--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -21,7 +21,7 @@ img.logo { overflow-clip-margin: content-box; overflow: clip; }
 div#container { position: relative; 
     top: .3em; 
     left: 0; 
-    width: 99%; 
+     
     margin: auto;  
 	}
 nav#nav.data {
@@ -43,7 +43,7 @@ div#\#html5-style-2content.data {
     margin-left:auto; 
     margin-right:auto; 
     padding:8px; 
-    font-size:medium; 
+    font-size:100%; 
     color:maroon; 
 }
 
@@ -721,6 +721,7 @@ li {
 #gallery3colmixcol-3 a:hover img.hid {
 	visibility: visible;
 }
+
 
 
 
