--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -49,7 +49,7 @@ div#\#html5-style-2content.data {
 
 /*remove the # from #header*/
 header#html5-style-2header {
-  width: 920px;
+  width: 95%;
   height: 180px;
   padding: 0;
   border: 10px white solid;
@@ -721,6 +721,7 @@ li {
 #gallery3colmixcol-3 a:hover img.hid {
 	visibility: visible;
 }
+
 
 
 
