--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -107,6 +107,43 @@ br.clear { clear:both;
 footer#html5-style-2footer { clear:both; color:maroon; text-align:center;
 }
 
+#container {
+  position: relative;
+}
+
+#menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#menu, #menu ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+#menu li {
+  float: left;
+  background: #FFF;
+}
+
+#menu a {
+  display: block;
+  padding: 5px;
+  width: 130px;
+}
+
+#menu li ul {
+  position: absolute;
+  left: -999em;
+  width: 140px;
+}
+
+#menu li:hover ul, #menu li ul:hover {
+  left:auto;
+}
+
 /*equalise for various browsers and change #header to header*
 div body header #content {
   margin: 0;
@@ -716,6 +753,7 @@ li {
 #gallery3colmixcol-3 a:hover img.hid {
 	visibility: visible;
 }
+
 
 
 
