--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -32,7 +32,7 @@ nav#nav.data {
     border-right: 1px solid #34495e;
     font-size: .9em;
 }
-div#\#html5-style-2content.data {
+div#html5-style-2content.data {
     background-color:transparent; 
     border-left:10px white solid; 
     border-right:10px white solid; 
@@ -937,6 +937,7 @@ li {
 #celebs {
 	clear: both;
 }
+
 
 
 
