--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -16,7 +16,8 @@ div.wrapper {
     position: relative; 
     top: 0em; 
     left: 0px; 
-    width: 110%; 
+    width: 100%; 
+	font-size: 100%
     margin-left:auto; 
     margin-right:auto; 
 	text-align: center;
@@ -937,6 +938,7 @@ li {
 #celebs {
 	clear: both;
 }
+
 
 
 
