--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -19,8 +19,8 @@ div.wrapper {
     left: 0px; 
     width: 97%; 
 	font-size: 100%;
-    margin-left:auto; 
-    margin-right:auto; 
+    margin-left:0; 
+    margin-right:0; 
 	text-align: center;
 }
 img.logo { overflow-clip-margin: content-box; overflow: clip; }
@@ -939,6 +939,7 @@ li {
 #celebs {
 	clear: both;
 }
+
 
 
 
