--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ nav#html5-style-2nav.data li {
   border-left-width: 0px;
 }
 
-/* set general side button styles */
+/* set general side button styles *
 li.btn {
   margin-bottom: 3px;
   text-align: center;
@@ -467,7 +467,7 @@ li.btn a:hover {
   border-left-width: 0px;
 }
 
-/*mouse active*/
+/*mouse active*
 li.btn a:active {
   background: maroon;
   border: 5px inset maroon;  padding: .3em .8em;
@@ -559,13 +559,13 @@ h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
 #midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
 }
-/*set nav block position and width and remove the #menu item*/
+/*set nav block position and width and remove the #menu item*
 nav ul { margin: -240px 0 10px 0; width:135px; float:right;
 }
-/*Set un-ordered list style within the menu block only. This removes bullets*/
+/*Set un-ordered list style within the menu block only. This removes bullets*
 nav li { list-style-type:none;
 }
-/* set general side button styles */
+/* set general side button styles *
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* 18CHAPTER 1 ■ MOVING TO HTML5 */
@@ -576,17 +576,17 @@ li.btn a { display: block; color: white; font-weight: bold; text-decoration: non
 /* mouseout (default) *
 li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
-/* mouseover */
+/* mouseover *
 li.btn a:hover { background: red; color:white; border: 5px outset red;
 }
-/*mouse active*/
+/*mouse active*
 li.btn a:active { background:maroon; border: 5px inset maroon;
 }
 br.clear { clear:both;
 }
 #midcol img { margin-left:10px;
 }
-/*change #footer to footer */
+/*change #footer to footer *
 footer { clear:both; color: white; text-align:center;
 }
 
@@ -636,7 +636,7 @@ body {
   background: #FFF url(images/green-grad.jpg) repeat-x;
   margin: auto;
 }
-/*
+
 body {
   margin: auto;
   font-family: var(--bs-body-font-family);
