--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -11,13 +11,13 @@ header, footer, section, article, nav { display:block;
 }
 div {
   border: 1px solid black;
-  padding: 20px;
+  padding: 0.3em 0.5em;
 }
 div.wrapper { 
     position: relative; 
     top: 0em; 
     left: 0px; 
-    width: 100%; 
+    width: 98%; 
 	font-size: 100%;
     margin-left:0; 
     margin-right:0; 
