--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -883,8 +883,10 @@ li {
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
+  /*
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
+  */
 	padding: 4px 8px;
 }
 
