--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -69,7 +69,7 @@ h1 {
 h1#html5-style-2h1.veryimportant.heading.stuff { font-size:300%; color:rgba(0,0,0,.5); position: relative; left:90px; top: -3px;
 width:480px;
 }
-#rosette { position:relative; left:350px; top: -5px;
+#rosette { position:relative; left:350px; top: -10em;
 }
 #html5-style-2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 30em; margin-top: -8%; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
