--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -34,19 +34,6 @@ nav#nav.data {
     border-right: 1px solid #34495e;
     font-size: .9em;
 }
-div#html5-style-2content.data {
-    background-color:transparent; 
-    border-left:10px white solid; 
-    border-right:10px white solid; 
-    border-bottom:10px white solid; 
-    width: 78%; 
-    margin-top: -10px; 
-    margin-left:auto; 
-    margin-right:auto; 
-    padding:8px; 
-    font-size:100%; 
-    color:maroon; 
-}
 
 /*remove the # from #header*/
 header#html5-style-2header {
@@ -71,7 +58,8 @@ width:480px;
 }
 #rosette { position:relative; left:350px; top: -10em;
 }
-#html5-style-2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 78%; margin-top: -8%; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+#html5-style-2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; 
+					   width: 78%; margin-top: -8%; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2#html5-style-2h2 { font-size: x-large; color:white; margin:0 0 10px 0;
 }
@@ -941,6 +929,7 @@ li {
 #celebs {
 	clear: both;
 }
+
 
 
 
