--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1,4 +1,4 @@
-/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2. */
+/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2. *
 
 /* equalise for various browsers and change #header to header */
 div body header #content { margin:0; padding:0; border:0;
@@ -51,7 +51,7 @@ width:480px;
 #rosette { position:relative; left:350px; top: -10em;
 }
 #html5-style-2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; 
-					   width: 58%; margin-top: 20px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+					   width: 60%; margin-top: 20px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2#html5-style-2h2 { font-size: 100%; color:white; margin:0 0 10px 0;
 }
@@ -943,6 +943,7 @@ absolute; top: 10px; left: 140px; visibility: hidden;
 }
 #gallery-onecol-1 a:hover img.hid { visibility:visible;
 }
+
 
 
 
