--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -945,8 +945,7 @@ img { border:0;
 li { margin: 10px; list-style-type:none;
 }
 /* MouseOut state (default) - create a space for the larger images and hide them*/
-#gallery-onecol-1 a img.hid { width: 260px; height:390px; position: 
-absolute; top: 10px; left: 140px; visibility: hidden;
+#gallery-onecol-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 140px; visibility: hidden;
 }
 /* MouseOver state (hover)- reveal larger image */
 #gallery-onecol-1 a:hover { background: white;
