--- a/style[1].css
+++ b/style[1].css
@@ -119,7 +119,7 @@ nav {
   display: block;
 }
 
-/*remove the # from #header*/
+/*remove the # from #header
 div#html5-ch1-7header.data {
   width: 920px;
   height: 180px;
