--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -90,7 +90,7 @@ br.clear { clear:both;
 #html5-style-2midcol img { margin-left:10px;
 }
 /*change #footer to footer */
-footer#html5-style-2footer { clear:both; color:maroon; text-align:center;
+footer#html5-style-2footer { clear:both; color:maroon; text-align:center; padding: 0.3em 0.5em;
 }
 
 /*drop down menu style menu.css*/
@@ -1002,6 +1002,7 @@ li { margin: 10px; list-style-type:none;
         #cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}
         #cboxClose{position:absolute; top:5px; right:5px; display:block; background:url(images/controls.png) top center no-repeat; width:38px; height:19px; text-indent:-9999px;}
         #cboxClose.hover{background-position:bottom center;}
+
 
 
 
