--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1,4 +1,14 @@
 #photos img {
+  position: absolute;
+}
+
+#photos {
+  width: 180px;
+  height: 200px;
+  overflow: hidden;
+}
+
+#photos img {
   display: none;
 }
 
@@ -1031,6 +1041,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
