--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1,3 +1,12 @@
+#news {
+  display: block;
+  height: 70px;
+}
+
+#news ul {
+  list-style-type: none;
+}
+
 #photos img {
   position: absolute;
 }
@@ -1041,6 +1050,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
