--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -10,11 +10,11 @@ html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 #paper { width: 960px;}
 #waves { width: 960px;}
 #plane { width: 930px;}
-set images to have no borders*/
+set images to have no borders
 img {
 border:0;
 }
-
+*/
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 /*add display attributes for the semantic tags*/
